Build and install correctly on linux

--- a/libsweep/Makefile
+++ b/libsweep/Makefile
@@ -2,7 +2,7 @@ include config.mk
 
 
 #all: $(target)
-all: buildOutputDirs $(target)
+all: buildOutputDirs $(target_path)
 
 print:
 	echo CC=$(CC) CFLAGS=$(CFLAGS)
@@ -23,19 +23,22 @@ $(BIN_DIR)/libsweep.so: $(OBJ_FILES)
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(LDFLAGS) $(INC_DIRS) -c $< -o $@
 
-#dummy: dummy.o time_unix.o
-#	$(CC) $(LDFLAGS) -o libsweep.so $^ $(LDLIBS)
-#dummy_win: dummy.o time_win.o
-#	$(CC) $(LDFLAGS) -o libsweep.so $^
+dummy: buildOutputDirs $(dummy_target)
+
+dummy_linux: $(DUMMY_OBJ_FILES)
+	$(LINKER) $(CFLAGS) $(LDFLAGS) -o $(BIN_DIR)/libsweep.so $^ $(LDLIBS)
+
+#dummy_win:  $(DUMMY_OBJ_FILES)
+#	$(LINKER) $(CFLAGS) $(LDFLAGS) -o $(BIN_DIR)/libsweep.dll $^
 
 install:
 	$(MKDIR_P) $(PREFIX)/include/sweep
-	install -m 0644 $(INC_DIR)/sweep.h $(PREFIX)/include\sweep
-	install -m 0644 $(INC_DIR)/sweep.hpp $(PREFIX)/include\sweep
+	install -m 0644 $(INC_DIR)/sweep.h $(PREFIX)/include/sweep
+	install -m 0644 $(INC_DIR)/sweep.hpp $(PREFIX)/include/sweep
 	$(MKDIR_P) $(PREFIX)/bin
-	install -m 0644 $(target) $(PREFIX)\bin
-	ln -sf $(PREFIX)/bin/libsweep.dll $(PREFIX)/bin/libsweep.dll.$(VERSION_MAJOR)
-	ln -sf $(PREFIX)/bin/libsweep.dll $(PREFIX)/bin/libsweep.dll.$(VERSION_MAJOR).$(VERSION_MINOR)
+	install -m 0644 $(target_path) $(PREFIX)/bin
+	ln -sf $(PREFIX)/bin/$(target) $(PREFIX)/bin/$(target).$(VERSION_MAJOR)
+	ln -sf $(PREFIX)/bin/$(target) $(PREFIX)/bin/$(target).$(VERSION_MAJOR).$(VERSION_MINOR)
 
 watch:
 	while ! inotifywait -e modify *.c *.h; do make; done
